fix(dsl): REG-224 -- null-tolerant procedure step maps in AST and compiled twins
Map.copyOf rejects null VALUES, so a procedure step declaring an explicit
JSON null (e.g. patchConcept.set clearing a reference field back to null)
crashed model parsing with a bare, contextless NullPointerException. Fixed
both ProcedureStepAst and its compiled-model twin CompiledProcedureStep
(which had the identical bug, undiscovered until now, and would have
re-crashed one layer down at compile time even after a parser-only fix) by
switching data/metadata/set/select to an unmodifiable LinkedHashMap copy,
the same null-tolerant pattern ConceptRecord.copyData already uses.

Registered a new twin-pair-registry.json rule so a future edit reverting
either record back to Map.copyOf without its twin fails
check-twin-pair-consistency.py instead of silently reintroducing the bug.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>